[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Entities/Portal Red.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.2139, 14.0951 )

[node name="Enemy" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 2
script = ExtResource( 1 )
direction = "down"
speed = 125

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Start_Timer" type="Timer" parent="."]
one_shot = true

[node name="Move_Timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Start_Timer" to="." method="_on_Start_Timer_timeout"]
[connection signal="timeout" from="Move_Timer" to="." method="_on_Move_Timer_timeout"]
